welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value estSurbiscuit
while (!estSurbiscuit) {
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (!estSurbiscuit) {
^