welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {

var vuBiscuit:Boolean = false

while (!estSurbiscuit) {
	for (compteur <- 1 to 8){
		avance()
	}
	droite()
	avance()
	gauche()
}
	
}
